# Agent-El-Dostor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: __init__.py
app/agent/: context.py  loop.py  prompts.py  schema.py  tools.py  verify.py
app/api/: main.py
app/core/: config.py  logging.py  trace.py  usage.py
app/generation/: __init__.py  loop.py  pdf.py  prompts.py  schema.py  tools.py  verify.py
app/ingestion/: contracts.py  legislation.py
app/llm/: client.py
app/retrieval/: embeddings.py  store.py
data/contracts/: sample_employment_contract_en.txt
data/legislation/: SOURCING.md  seed_civil_rental.json  seed_commercial.json  seed_companies.json  seed_labor_law.json
eval/: run_eval.py
eval/dataset/: cases.json
ui/: streamlit_app.py
