[project]
name = "agent-eldostor"
version = "0.0.1"
description = "Agent El-Dostor — Egyptian contract intelligence agent (RAG-grounded, tool-calling)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "streamlit>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
