[project]
name = "agent-eldostor"
version = "0.0.1"
description = "Agent El-Dostor — Egyptian contract intelligence agent (RAG-grounded, tool-calling)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "streamlit>=1.34",
    # Contract parsing / OCR
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "pdf2image>=1.17",
    # Optional REST API (M4)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    # Contract generation -> PDF (M5). WeasyPrint renders RTL Arabic + bilingual layouts.
    "weasyprint>=60",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
